0.5: Various bug fixes: post data not showing after bad submission, basic style for error message and checkboxes
git-svn-id: https://plugins.svn.wordpress.org/hotscot-contact-form/trunk@669823 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/form/hcf-horizontal.css
+++ b/css/form/hcf-horizontal.css
@@ -34,3 +34,15 @@
 .hcf-form .hcf-captcha-wrap input{
 	float: left;
 }
+
+/** Error class **/
+div.hcf-error{
+	margin: 5px 0 15px;
+	background-color: #ffebe8;
+	border: 1px solid #c00;
+	padding: 6px;
+}
+
+div.hcf-error p{
+	margin-bottom: 0;
+}
